--- a/_data/side_menu.yml
+++ b/_data/side_menu.yml
@@ -1,7 +1,7 @@
-- name: 블로그
-  href: http://blog.opnay.com
-  icon: ./image/tistory.svg
+- name: '블로그'
+  href: 'http://blog.opnay.com'
+  icon: /image/tistory.svg
 
-- name: 애플리케이션 (준비중)
-  href: # None
-  icon: ./image/application.svg
+- name: '애플리케이션 (준비중)'
+  href: '#'
+  icon: /image/application.svg
