side: menu: Update menu

--- a/_data/side_menu.yml
+++ b/_data/side_menu.yml
@@ -2,6 +2,6 @@
   href: 'http://blog.opnay.com'
   icon: /image/tistory.svg
 
-- name: '애플리케이션 (준비중)'
+- name: '애플리케이션'
   href: '/app/'
   icon: /image/application.svg
