layouts: default: Update social section

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,15 +1,22 @@
-- name: Facebook
-  href: https://facebook.com/opnay
-  icon: facebook.svg
+- name: "Home"
+  href: "http://opnay.com"
+  icon: "home.svg"
 
-- name: Twitter
-  href: https://twitter.com/opnay_dev
-  icon: twitter.svg
+- name: "Facebook"
+  href: "https://facebook.com/opnay"
+  icon: "facebook.svg"
+  color: "#3b5998"
 
-- name: Google Plus
-  href: https://plus.google.com/107296541638373404997
-  icon: googleplus.svg
+- name: "Twitter"
+  href: "https://twitter.com/opnay_dev"
+  icon: "twitter.svg"
+  color: "#1da1f2"
 
-- name: Github
-  href: https://github.com/opnay
-  icon: github.svg
+- name: "Google Plus"
+  href: "https://plus.google.com/107296541638373404997"
+  icon: "googleplus.svg"
+  color: "#ea4335"
+
+- name: "Github"
+  href: "https://github.com/opnay"
+  icon: "github.svg"
