app: List Added 'Simplify' and 'Immmortal Kernel'

--- a/_data/apps.yml
+++ b/_data/apps.yml
@@ -1,11 +1,23 @@
 - name : "계산기"
   type : WebApp
-  dir : calculator
+  href : /app/calculator
   date : "2017.06.10"
   desc : "HTML, CSS, jQuery로 만들어진 간단한 계산기입니다."
 
 - name : "디지털 시계"
   type : WebApp
-  dir : clock
+  href : /app/clock
   date : "2017.06.28 (마지막 수정 : 2017.06.29)"
   desc : "HTML, CSS, jQuery로 만들어진 디지털 시계입니다.<br>네이버 Whale 브라우저의 새 탭 페이지를 참고하여 만들었으며, 배경화면은 <em>unsplash</em>에 공개된 사진을 사용했습니다."
+
+- name : "Simplify"
+  type : Skin
+  href : "http://blog.opnay.com/111"
+  date : "2015.12.07 (1.4)"
+  desc : "Tistory 블로그에서 사용할 수 있는 블로그 스킨입니다.<br>머티리리얼 디자인 기반(?)으로 만들었으며, 최대한 사용하기 편하도록 고려하며 만들었습니다."
+
+- name : "Immortal Kernel"
+  type : Kernel
+  href : "http://blog.opnay.com/109"
+  date : "2015.11.07 (1.13)"
+  desc : "Galaxy S4 LTE (S/K) 모델에서 사용할 수 있는 커스텀 커널입니다.<br>Linux 3.4.110으로 업스트림했으며, f2fs파일시스템 지원, IO 스케줄러 / 가버너 추가 등 여러가지 트윅과 기능을 적용한 커널입니다."
