--- a/_data/apps.yml
+++ b/_data/apps.yml
@@ -1,3 +1,9 @@
+- name : "컴퓨터 예약 종료"
+  type : Windows
+  href : /app/shutdown
+  date : "2017.09.01"
+  desc : "Windows 프로그래밍 연습용으로 만들어 봤습니다."
+
 - name : "계산기"
   type : WebApp
   href : /app/calculator
