data: apps: Wrap href values

--- a/_data/apps.yml
+++ b/_data/apps.yml
@@ -6,13 +6,13 @@
 
 - name : "시스템 예약 종료"
   type : "Windows, Application"
-  href : /app/shutdown
+  href : "/app/shutdown"
   date : "2017.09.01"
   desc : "Windows 프로그래밍 연습용으로 만들어 봤습니다."
 
 - name : "디지털 시계"
   type : "Web, Application"
-  href : /app/clock
+  href : "/app/clock"
   date : "2017.06.29"
   desc : "HTML, CSS, jQuery로 만들어진 디지털 시계입니다.<br>네이버 Whale 브라우저의 새 탭 페이지를 참고하여 만들었으며, 배경화면은 <em>unsplash</em>에 공개된 사진을 사용했습니다.<br>최초 공개 : 2017.06.28"
 
