--- a/_data/apps.yml
+++ b/_data/apps.yml
@@ -1,6 +1,6 @@
 - name : "Simplify2"
   type : "Web, Skin"
-  href : "http://blog.opnay.com/143"
+  href : "blog.opnay.com/143"
   date : "2018.03.07 (v1)"
   desc : "Tistory 스킨인 Simplify의 두번째 버전입니다. 1단형에 내용에만 집중할 수 있도록 다른 요소들을 최소화 했고, 아이콘으로된 링크들로 블로그의 메뉴를 한번에 알수 있도록 만들었습니다."
 
@@ -18,12 +18,12 @@
 
 - name : "Simplify"
   type : "Web, Skin"
-  href : "http://blog.opnay.com/111"
+  href : "blog.opnay.com/111"
   date : "2015.12.07 (1.4)"
   desc : "Tistory 블로그에서 사용할 수 있는 블로그 스킨입니다.<br>머티리리얼 디자인 기반(?)으로 만들었으며, 최대한 사용하기 편하도록 고려하며 만들었습니다.<br>최초 공개 : 2015.06.14"
 
 - name : "Immortal Kernel"
   type : "Android, Kernel"
-  href : "http://blog.opnay.com/134"
+  href : "blog.opnay.com/134"
   date : "2017.09.12 (1.14)"
   desc : "Galaxy S4 LTE (S/K) 모델에서 사용할 수 있는 커스텀 커널입니다.<br>f2fs파일시스템 지원, IO 스케줄러 / 가버너 추가 등 여러가지 트윅과 기능을 적용한 커널입니다."
