--- a/image/favicons/manifest.json
+++ b/image/favicons/manifest.json
@@ -2,12 +2,12 @@
     "name": "",
     "icons": [
         {
-            "src": "/image/favicons/android-chrome-192x192.png",
+            "src": "/image/favicons/192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/image/favicons/android-chrome-512x512.png",
+            "src": "/image/favicons/512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
