_config: Exclude some unneeded files

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ url: "https://opnay.com"
 
 permalink: /:categories/:year:month-:slug
 
+exclude: ["CNAME","README.md"]
+
 defaults:
   -
     scope:
