_layouts/base: Add Open Graph
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ permalink: /:categories/:year:month-:slug
 
 exclude: ["CNAME","README.md"]
 
+# Opengraph
+twitter: "@opnay_dev"
+
 defaults:
   -
     scope:
