_config: Set defaults layout and config for 'category' path
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -27,3 +27,9 @@ defaults:
       layout: 'blog'
       comments: true
       ads: true
+  -
+    scope:
+      path: 'category'
+    values:
+      layout: 'category'
+      back: '/category'
