_layouts/base: Add meta description
Signed-off-by: Kim In Seop <opnayn@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 layout: ""
 title: "OPNay Studio"
+desc: "개발정보를 올리는 개인 블로그입니다."
 url: "https://opnay.com"
 
 permalink: /:categories/:year:month-:slug
