--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "gatsby-plugin-eslint": "^2.0.5",
     "prettier": "^1.18.2"
   },
   "repository": {
