--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "eslint-config-prettier": "^6.1.0",
-    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "gatsby-plugin-eslint": "^2.0.5",
     "gatsby-plugin-typescript": "^2.1.2",
