--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.13.64",
     "gatsby-plugin-eslint": "^2.0.5",
     "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-remark-autolink-headers": "^2.1.13",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-source-filesystem": "^2.1.18",
     "gatsby-transformer-remark": "^2.6.19",
