--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,7 @@ on:
       - gatsby-action
 
 jobs:
-  initial:
+  Build:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,7 +18,32 @@ jobs:
       with:
         node-version: 12.x
 
-    - name: npm install
+    - name: Install Packages
       run: npm install
       env:
         CI: true
+        
+    - name: Build Gatsby 
+      run: npm build
+  
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Configure git
+        run: |
+          export HEAD_H=$(git rev-parse HEAD)
+          cd public
+          git init
+          git remote add origin $(GITHUB_REPOSITORY)
+          git fetch origin
+          git reset --soft origin/master
+      - name: Commit Update
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "Github Action"
+          git commit -m "Published $(HEAD_H)"
+      - name: Push to master
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }} 
