--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,7 +33,7 @@ jobs:
         export HEAD_H=$(git rev-parse HEAD)
         cd public
         git init
-        git remote add origin $(GITHUB_REPOSITORY)
+        git remote add origin $GITHUB_REPOSITORY
         git fetch origin
         git reset --soft origin/master
 
@@ -41,7 +41,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "Github Action"
-        git commit -m "Published $(HEAD_H)"
+        git commit -m "Published $HEAD_H"
 
     - name: Push to master
       uses: ad-m/github-push-action@master
