--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,6 +30,6 @@ jobs:
         
     - name: Push to master
       uses: maxheld83/ghpages@master
-      with:
+      env:
         BUILD_DIR: public
         GH_PAT: ${{ secrets.GITHUB_TOKEN }}
