--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
       run: npm run build
         
     - name: Push to master
-      uses: maxheld83/ghpages@master
+      run: ./.github/scripts/push.sh
       env:
         BUILD_DIR: public
-        GH_PAT: ${{ secrets.GITHUB_TOKEN }}
+        TOKEN: ${{ secrets.TOKEN }}
