--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,9 @@ jobs:
       run: npm run build
         
     - name: Push to master
-      run: ./.github/scripts/push.sh
+      run: |
+        chmod a+x ./.github/scripts/*.sh
+        ./.github/scripts/push.sh
       env:
         BUILD_DIR: public
         TOKEN: ${{ secrets.TOKEN }}
