--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,24 +14,26 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
-      
+
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
 
+    - name: Install Yarn
+      run: npm install -g yarn
+
     - name: Install Packages
-      run: npm install
-      env:
-        CI: true
-        
+      run: yarn
+
     - name: Build Gatsby 
-      run: npm run build
-        
+      run: yarn build
+
     - name: Push to master
       run: |
         chmod a+x ./.github/scripts/*.sh
         ./.github/scripts/push.sh
       env:
         BUILD_DIR: public
+        CNAME: opnay.com
         TOKEN: ${{ secrets.TOKEN }}
