--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.13.64",
     "gatsby-plugin-eslint": "^2.0.5",
+    "gatsby-plugin-google-analytics": "^2.1.23",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-remark-autolink-headers": "^2.1.13",
     "gatsby-remark-external-links": "^0.0.4",
