--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.13.64",
     "gatsby-plugin-eslint": "^2.0.5",
     "gatsby-plugin-google-analytics": "^2.1.23",
+    "gatsby-plugin-sitemap": "^2.2.19",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-remark-autolink-headers": "^2.1.13",
     "gatsby-remark-external-links": "^0.0.4",
