--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-remark": "^2.6.19",
     "prismjs": "^1.17.1",
     "react": "^16.9.0",
+    "react-adsense": "^0.1.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1"
   },
